# alpacloud

./: .flake8  .gitignore  .pylintrc  BUILD  install.py  mypy.ini  pants.toml  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: ansible.yml  main.yml  pants.yml  pkg_ansible_builder.yml
ansible/lilatomic/api/: BUILD
ansible/lilatomic/api/plugins/modules/: http.py
ansible/lilatomic/azcli/: BUILD  README.md  galaxy.yml
ansible_collections/lilatomic/api/: BUILD  galaxy.yml
ansible_collections/lilatomic/azcli/: BUILD  galaxy.yml  requirements.txt
ansibles/lilatomic/api/: galaxy.yml  requirements.txt
ansibles/lilatomic/api/meta/: runtime.yml
cicd/: tan.lockfile
lilatomic/api/: BUILD  README.md  galaxy.yml
lilatomic/api/plugins/action/: delete.py  get.py  http.py  patch.py  post.py  put.py
lilatomic/api/plugins/modules/: http.py
lilatomic/api/tests/sanity/: ignore-2.13.txt
lilatomic/api/tests/utils/: BUILD
lilatomic/azcli/: BUILD  README.md  galaxy.yml  requirements.txt
lilatomic/azcli/plugins/action/: BUILD  cli.py
lilatomic/azcli/plugins/modules/: cli.py
lilatomic/azcli/tests/integration/: __main__.py
lilatomic/azcli/tests/unit/: BUILD  test_cli.py
tools/ansible-builder/: install.py  readme.md  requirements.txt  setup.py
tools/ansible-builder/tests/: test_builder.py
tools/ansible_builder/: BUILD  alpacloud_ansible_builder.py  requirements.txt  setup.py
tools/ansible_builder/tests/: BUILD  test_builder.py
tools/ansible_it/: BUILD  ansible_it.py
tools/multitest/: BUILD
(+21 files in other folders)
